Changes
=======

1.0b3 ()
------------------

Bug fixes:

- A regression in the VSI path of some zip:// URLs has been fixed (#1377).
- Transform, coordinate reference system, and ground control points are
  properly set when opening a dataset in w+ mode (#1359.

1.0b2 (2018-06-19)
------------------

Breaking changes:

- `boundless=True` reads from warped VRTs are disallowed. Instead, VRTs should
  be constructed so that only data bounded by their extents is read. In
  exchange, boundless reads for non-VRT datasets are faster and more robust.

Upcoming deprecations:

- Comparison of CRS objects to str or dict is deprecated.

New features:

- Added `out`, `out_shape`, `window`, `resampling` keyword parameters to
  the `dataset_mask` method (#1298).
- CRS.from_string can now take WKT strings as input.

Bug fixes:

- Tests have been added to confirm that reading from a WarpedVRT will use the
  source dataset's masks and overviews.
- Expectations of warp tests that use resampling algorithms other than nearest
  neighbor have been corrected.
- WarpedVRT.crs now returns a CRS, not a str.
- A Windows-crashing bug in the _warp module has been fixed (#1356).

1.0b1 (2018-05-25)
------------------

Breaking changes:

- The signatures of all Dataset constructors have changed: these method now
  take instance of ParsedPath or UnparsedPath from rasterio.path and do not
  take strings.
- The signatures of get_writer_for_path and get_writer_for_driver have 
  changed in the same way.
- Whether to print GeoJSON feature sequences or a GeoJSON feature collection
  from rio-shapes is now controlled by a ``--sequence/--collection`` option.
  A sequence is now the default (#927).
- Comparing empty ``CRS`` objects returns ``True`` (#1034).
- Deprecated window functions have been removed from the rasterio module. Their
  replacements are in rasterio.windows (#1115).
- The deprecated r- mode has been removed from ``rasterio.open()`` (#1116).